# Yolo6D_ROS

./: .gitignore  CMakeLists.txt  README.md  environment.yml  package.xml
launch/: grasping.launch  posesub.launch  rviz.launch  yolo6d.launch  yolo6d_cam.launch
rviz/: display.rviz  display_cam.rviz
scripts/: __init__.py  cfg.py  darknet.py  dataset.py  grasping.py  image.py  poseSubscriber.py  region_loss.py  utils.py  yolo6d_ros.py
txonigiri/: txonigiri.data  yolo-pose.cfg
